--- a/src/app/header/header.component.less
+++ b/src/app/header/header.component.less
@@ -18,6 +18,8 @@
 .a{
     animation: typetext 4s steps(24) 1s 1 normal both,
     blinkcursor 500ms steps(24) 1s 10 normal;
+    -webkit-animation: typetext 4s steps(24) 1s 1 normal both,
+    blinkcursor 500ms steps(24) 1s 10 normal;
 }
 
 @keyframes typetext{
@@ -25,8 +27,19 @@
     to{width: 320px}
 }
 
+@-webkit-keyframes typetext{
+    from{width: 10px}
+    to{width: 320px}
+}
+
 @keyframes blinkcursor {
     from{border-right-color: #252526;}
     to{border-right-color: white;}
+}
+
+@-webkit-keyframes blinkcursor{
+    from{border-right-color: #252526;}
+    to{border-right-color: white;}
+
 }
 
