--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,3 +1,13 @@
 <div class="c">
-    
+    <div class="m">
+        <ul>
+            <li>About</li>
+            <li>Skills</li>
+            <li>Experience</li>
+            <li>Education</li>
+            <li>Projects</li>
+            <li>Presentations</li>
+            <li>ConnectNow</li>
+        </ul>
+    </div>
 </div>
