--- a/src/app/menu/menu.component.less
+++ b/src/app/menu/menu.component.less
@@ -4,9 +4,14 @@
     left: 0px;
     height: 100%;
     background-color: #252526;
-    width: 200px; 
-    .m{
+    width: 200px;
+    div{
         color:white;
-        
+        margin-top: 10px;
+    }
+    .m{
+        div{
+            padding: 10px 20px;
+        }
     }
 }
