--- a/src/app/header/header.component.less
+++ b/src/app/header/header.component.less
@@ -1,16 +1,19 @@
 .c{
-    height: 80px;
+    height: 70px;
     background: #252526;
-    text-align: center;
     color: white;
+    .material-icons{
+        font-size:30px
+    }
     .t{
-        height:60px;
+        height:45px;
         margin: 10px 0px;
-        font-size: 40px;
+        font-size: 30px;
         border-right: 10px solid #252526;
         white-space: nowrap;
         overflow: hidden; 
         display: inline-block;
+        font-weight: 500;
     }
 
 }
@@ -27,8 +30,8 @@
 
 
 @keyframes typetext{
-    from{width: 10px}
-    to{width: 320px}
+    from{width: 0.5rem}
+    to{width: 15rem}
 }
 
 @keyframes blinkcursor {
