--- a/src/app/menu/menu.component.less
+++ b/src/app/menu/menu.component.less
@@ -1,17 +1,18 @@
 .c{
     position: absolute;
-    top: 80px;
+    top: 70px;
     left: 0px;
-    height: 100%;
+    height: -webkit-fill-available;
     background-color: #252526;
     width: 200px;
     div{
         color:white;
-        margin-top: 10px;
     }
     .m{
         div{
             padding: 10px 20px;
+            margin-bottom:10px;
+            font-size: 20px;
         }
     }
 }
