--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,2 @@
 <app-header></app-header>
-<app-menu *ngIf="menu" (close)="menu=false" [isMobile]="isMobile"></app-menu>
-<button class="btn btn-default" (click)="menu=true"><i class="material-icons">menu</i></button>
+<app-threede></app-threede>
