--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,11 +1,11 @@
 <div class="c">
     <div class="text-end"><i class="material-icons pointer m-2" (click)="close.emit(true)">close</i></div>
     <div class="m">
-            <div><i class="material-icons align-middle mx-2">home</i><span class="align-middle">Home</span></div>
-            <div><i class="material-icons align-middle mx-2">trending_up</i><span class="align-middle">Experience</span></div>
-            <div><i class="material-icons align-middle mx-2">school</i><span class="align-middle">Education</span></div>
-            <div><i class="material-icons align-middle mx-2">work_history</i><span class="align-middle">Projects</span></div>
-            <div><i class="material-icons  align-middle mx-2">workspace_premium</i><span class="align-middle">Awards</span></div>
-            <div><i class="material-icons  align-middle mx-2">forum</i><span class="align-middle">Connect Now</span></div>
+            <div class="pointer"><i class="material-icons align-middle mx-2">home</i><span class="align-middle">Home</span></div>
+            <div class="pointer"><i class="material-icons align-middle mx-2">trending_up</i><span class="align-middle">Experience</span></div>
+            <div class="pointer"><i class="material-icons align-middle mx-2">school</i><span class="align-middle">Education</span></div>
+            <div class="pointer"><i class="material-icons align-middle mx-2">work_history</i><span class="align-middle">Projects</span></div>
+            <div class="pointer"><i class="material-icons  align-middle mx-2">workspace_premium</i><span class="align-middle">Awards</span></div>
+            <div class="pointer"><i class="material-icons  align-middle mx-2">forum</i><span class="align-middle">Connect Now</span></div>
     </div>
 </div>
