--- a/src/app/threede/threede.component.html
+++ b/src/app/threede/threede.component.html
@@ -3,15 +3,15 @@
         <div class="txl shadow"><span>3</span><span>De</span></div>
     </div>
     <div class="col-12 col-sm-6 col-md-4">
-        <div class="text-start">
+        <div class="text-start a">
             <span class="tl">De</span>
             <span class="tm">sign</span>
         </div>
-        <div class="text-center">
+        <div class="text-center a">
             <span class="tl">De</span>
             <span class="tm">velop</span>
         </div>
-        <div class="text-end">
+        <div class="text-end a">
             <span class="tl">De</span>
             <span class="tm">ploy</span>
         </div>
