--- a/src/app/threede/threede.component.less
+++ b/src/app/threede/threede.component.less
@@ -3,7 +3,6 @@
     font-size: 3rem;
     color: darkgoldenrod;
     padding: 5px;
-    background: gainsboro;
     border: 3px solid goldenrod;
     border-radius: 10px;
 }
@@ -18,5 +17,29 @@
     color: cadetblue;
 }
 .bg-card{
-    background:cornsilk;
+    background:linear-gradient(45deg, cornsilk, white);;
 }
+
+@keyframes spin {
+  from {transform: translate(-50%, -50%) rotate(0);}
+  to   {transform: translate(-50%, -50%) rotate(360deg);}
+}
+.a{
+    animation: fadeIn 4s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    transform-origin: 50% 50%;
+}
+
+@keyframes fadeIn {
+    0% {
+      opacity: 0;
+      transform: scale(0.1);
+    }
+    50% {
+      transform: scale(1);
+    }
+    100% {
+        opacity: 1;
+    }
+  }
