--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -1,1 +1,38 @@
-<p>experience works!</p>
+<!-- The Timeline -->
+
+<ul class="timeline">
+
+	<!-- Item 1 -->
+	<li>
+		<div class="direction-r">
+			<div class="flag-wrapper">
+				<span class="flag">Wellsfargo</span>
+				<span class="time-wrapper"><span class="time">2020 - present</span></span>
+			</div>
+			<div class="desc">Leading the team. Delivering key products to Investment Banking, Building resuable and scalable resources</div>
+		</div>
+	</li>
+  
+	<!-- Item 2 -->
+	<li>
+		<div class="direction-l">
+			<div class="flag-wrapper">
+				<span class="flag">Deloitte.</span>
+				<span class="time-wrapper"><span class="time">2019 - 2020</span></span>
+			</div>
+			<div class="desc">Became more professional, more agile. Enhanced skillset, certifications. Being part of development of next gen heath care systems</div>
+		</div>
+	</li>
+
+	<!-- Item 3 -->
+	<li>
+		<div class="direction-r">
+			<div class="flag-wrapper">
+				<span class="flag">Tata Consultancy Services</span>
+				<span class="time-wrapper"><span class="time">2016 - 2019</span></span>
+			</div>
+			<div class="desc">Journey started from here. Its the Tree where I learnt lot of skills, ethics and core values</div>
+		</div>
+	</li>
+  
+</ul>
