--- a/src/app/simplify/simplify.component.html
+++ b/src/app/simplify/simplify.component.html
@@ -1,16 +1,16 @@
-<div class="row">
-    <div class="col-6">
-        <div class="d-flex align-items-center">
-            <div>Complex</div>
-            <div>Business</div>
-            <div>Problems</div>
+<div class="row m-3 shadow p-3 r">
+    <div class="col-6 text-end">
+        <div class="d-inline-block text-start fs-2 fw-bold">
+            <div class="s">Complex</div>
+            <div class="c">Business</div>
+            <div class="s">Problems</div>
         </div>
     </div>
-    <div class="col-6">
-        <div class="d-flex align-items-center">
-            <div>Simple</div>
-            <div>Software</div>
-            <div>Solutions</div>
+    <div class="col-6 text-start">
+        <div class="d-inline-block text-start fs-2 fw-bold">
+            <div><span class="s">S</span><span class="c">imple</span></div>
+            <div><span class="s">S</span><span class="c">oftware</span></div>
+            <div><span class="s">S</span><span class="c">olutions</span></div>
         </div>
     </div>
 </div>
