--- a/src/app/threede/threede.component.less
+++ b/src/app/threede/threede.component.less
@@ -17,7 +17,7 @@
     color: cadetblue;
 }
 .bg-card{
-    background:linear-gradient(45deg, cornsilk, white);;
+    background:linear-gradient(45deg, cornsilk, white);
 }
 
 @keyframes spin {
