--- a/src/app/experience/experience.component.less
+++ b/src/app/experience/experience.component.less
@@ -1,3 +1,10 @@
+.r{
+  color:white;
+  background-color: tomato;
+  font-size: 35px;
+  font-weight: 500;
+}
+
 .timeline {
     position: relative;
     width: 660px;
@@ -202,9 +209,9 @@
       left: 50%;
       content: ' ';
       display: block;
-      width: 12px;
-      height: 12px;
-      margin-left: -9px;
+      width: 20px;
+      height: 20px;
+      margin-left: -5px;
       background: #fff;
       border-radius: 10px;
       border: 4px solid rgb(255,80,80);
@@ -219,7 +226,7 @@
       top: -8px;
       height: 0;
       width: 0;
-      margin-left: -8px;
+      margin-left: -5px;
       border: solid transparent;
       border-bottom-color: rgb(255,255,255);
       border-width: 8px;
