--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,5 @@
 <app-header></app-header>
+<app-profile></app-profile>
 <app-threede></app-threede>
 <app-simplify></app-simplify>
+<app-experience></app-experience>
