--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,1 +1,8 @@
-<p>profile works!</p>
+<div class="row text-center r">
+    <span>
+        UX Designer <br /> 
+        Lead Engineer<br />
+        Tech Consultant<br /> 
+        Fullstack Developer<br />
+        </span>
+</div>
