--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -1,3 +1,6 @@
+<div class="row m-0 px-2 r text-center">
+	Timeline
+</div>
 <!-- The Timeline -->
 
 <ul class="timeline">
@@ -9,7 +12,7 @@
 				<span class="flag">Wellsfargo</span>
 				<span class="time-wrapper"><span class="time">2020 - present</span></span>
 			</div>
-			<div class="desc">Leading the team. Delivering key products to Investment Banking, Building resuable and scalable resources</div>
+			<div class="desc">Leading the team. Delivering key products to Investment Banking, Building resuable and scalable resources using Microfrontends and Microservices. Reactive, Event Driven Architecture</div>
 		</div>
 	</li>
   
@@ -20,7 +23,7 @@
 				<span class="flag">Deloitte.</span>
 				<span class="time-wrapper"><span class="time">2019 - 2020</span></span>
 			</div>
-			<div class="desc">Became more professional, more agile. Enhanced skillset, certifications. Being part of development of next gen heath care systems</div>
+			<div class="desc">Great Experience. Became more professional, more agile. Enhanced skillset, completed certifications. Being part of development of next gen heath care systems using Microservices.</div>
 		</div>
 	</li>
 
@@ -31,7 +34,7 @@
 				<span class="flag">Tata Consultancy Services</span>
 				<span class="time-wrapper"><span class="time">2016 - 2019</span></span>
 			</div>
-			<div class="desc">Journey started from here. Its the Tree where I learnt lot of skills, ethics and core values</div>
+			<div class="desc">Journey started from here. Its the Tree where we learn lot of skills, ethics and core values. Develop from scratch, business software (Angular UI and Java Restful Services) for Airline Client.</div>
 		</div>
 	</li>
   
