--- a/src/app/simplify/simplify.component.html
+++ b/src/app/simplify/simplify.component.html
@@ -1,12 +1,15 @@
 <div class="row m-3 shadow p-3 r">
-    <div class="col-6 text-end">
+    <div class="col-5 text-end">
         <div class="d-inline-block text-start fs-2 fw-bold">
             <div class="s">Complex</div>
             <div class="c">Business</div>
             <div class="s">Problems</div>
         </div>
     </div>
-    <div class="col-6 text-start">
+    <div class="col-2 d-flex align-items-center justify-content-center">
+        <span class="sy material-icons">arrow_right_alt</span>
+    </div>
+    <div class="col-5 text-start">
         <div class="d-inline-block text-start fs-2 fw-bold">
             <div><span class="s">S</span><span class="c">imple</span></div>
             <div><span class="s">S</span><span class="c">oftware</span></div>
