--- a/src/app/threede/threede.component.less
+++ b/src/app/threede/threede.component.less
@@ -1,10 +1,11 @@
 .txl{
     font-weight: bolder;
     font-size: 3rem;
-    color: darkgoldenrod;
+    color: lightgoldenrodyellow;
     padding: 5px;
-    border: 3px solid goldenrod;
+    border: 3px solid gold;
     border-radius: 10px;
+    background: lightseagreen;
 }
 .tl{
     font-weight: bold;
@@ -26,7 +27,7 @@
 }
 .a{
     animation: fadeIn 4s;
-    animation-iteration-count: infinite;
+    animation-iteration-count: 7;
     animation-direction: alternate;
     transform-origin: 50% 50%;
 }
