--- a/src/app/profile/profile.component.less
+++ b/src/app/profile/profile.component.less
@@ -1,6 +1,7 @@
 .r {
     overflow: hidden;
     position: relative;
+    height: 50px;
     color: white;
     background-color: cornflowerblue;
 }
