--- a/src/app/threede/threede.component.less
+++ b/src/app/threede/threede.component.less
@@ -1,11 +1,10 @@
 .txl{
     font-weight: bolder;
     font-size: 3rem;
-    color: lightgoldenrodyellow;
+    color: darkgoldenrod;
     padding: 5px;
-    border: 3px solid gold;
+    border: 3px solid goldenrod;
     border-radius: 10px;
-    background: lightseagreen;
 }
 .tl{
     font-weight: bold;
