--- a/src/app/menu/menu.component.less
+++ b/src/app/menu/menu.component.less
@@ -1,6 +1,6 @@
 .c{
     position: fixed;
-    top: 70px;
+    top: 68px;
     left: 0px;
     height: -webkit-fill-available;
     background-color: #252526;
@@ -16,4 +16,7 @@
             font-size: 20px;
         }
     }
+}
+div.active{
+    color:goldenrod;
 }
