--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,4 +1,4 @@
-<div class="row text-center r">
+<div class="row m-0 text-center r">
     <span>
         UX Designer <br /> 
         Lead Engineer<br />
