--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,4 +2,5 @@
 <app-profile></app-profile>
 <app-threede></app-threede>
 <app-simplify></app-simplify>
+<app-skills></app-skills>
 <app-experience></app-experience>
