--- a/src/app/menu/menu.component.less
+++ b/src/app/menu/menu.component.less
@@ -11,12 +11,18 @@
     }
     .m{
         div{
-            padding: 10px 20px;
+            padding: 10px 20px 10px 15px;
             margin-bottom:10px;
             font-size: 20px;
+            border-left: 5px solid transparent;
+        }
+        div.pointer:hover{
+            border-left: 5px solid white;
+            background: dimgray;
+        }
+        div.pointer.active{
+            border-left: 5px solid white;
+            background: dimgray;
         }
     }
-}
-div.active{
-    color:goldenrod;
 }
