--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -7,11 +7,11 @@
             </div>
             <div class="pointer" [ngClass]="{'active':active=='app-skills'}" (click)="focus('app-skills')">
                 <i class="material-icons align-middle mx-2">equalizer</i>
-                <span class="align-middle">Skills</span>
+                <span class="align-middle">Tech Stack</span>
             </div>
             <div class="pointer" [ngClass]="{'active':active=='app-experience'}" (click)="focus('app-experience')">
                 <i class="material-icons align-middle mx-2">trending_up</i>
-                <span class="align-middle">Experience</span>
+                <span class="align-middle">Timeline</span>
             </div>
             <div class="pointer" [ngClass]="{'active':active=='app-education'}" (click)="focus('app-education')">
                 <i class="material-icons align-middle mx-2">school</i>
