--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,153 +1,91 @@
 <div class="row m-0 px-2 r text-center">
-	Skills
+  <div class="col-12 text-center">
+    Tech Stack
+  </div>
 </div>
-<!--
 <div class="container">
-    <div class="card">
-      <div class="card-content">
-        <h4 class="brown-text light">Front End Development</h4>
-        <div class="row text-center">
-          <div class="col s4 m2">
-            <img alt="" src="/assets/img/html5.png" class="responsive-img">HTML5
-          </div>
-          <div class="col s4 m2">
-            <img alt="" src="/assets/img/react.png" class="responsive-img">JSX
-          </div>
-          <div class="col s4 m2">
-            <img alt="" src="/assets/img/haml.png" class="responsive-img">Haml
-          </div>
-          <div class="col s4 m2">
-            <img alt="" src="/assets/img/jade.png" class="responsive-img">Jade
-          </div>
-          <div class="col s4 m2">
-            <img alt="" src="/assets/img/jekyll.png" class="responsive-img">Jekyll
-          </div>
+  <div class="card m-2 shadow">
+    <div class="card-content p-1">
+      <h4 class="brown-text light">Frontend / UI </h4>
+      <div class="row text-center">
+        <div class="col s4 m2">
+          <img alt="" src="/assets/img/logo/html5.png" class="responsive-img">HTML5
         </div>
-      </div>
-    </div>
-    <div class="card">
-      <div class="card-content">
-        <h4 class="brown-text light">CSS</h4>
-        <div class="row text-center">
-          <div class="col s4 m2">
-            <img alt="" src="/assets/img/css3.png" class="responsive-img">CSS3
-          </div>
-          <div class="col s4 m2">
-            <img alt="" src="/assets/img/sass.png" class="responsive-img">SASS
-          </div>
-          <div class="col s4 m2">
-            <img alt="" src="/assets/img/bootstrap.png" class="responsive-img">Bootstrap
-          </div>
-          <div class="col s4 m2">
-            <img alt="" src="/assets/img/foundation.png" class="responsive-img">Foundation
-          </div>
-          <div class="col s4 m2">
-            <img alt="" src="/assets/img/materialize.png" class="responsive-img">Materialize
-          </div>
+        <div class="col s4 m2">
+          <img alt="" src="/assets/img/logo/css3.png" class="responsive-img">CSS3
         </div>
-      </div>
-    </div>
-    <div class="card">
-      <div class="card-content">
-        <h4 class="brown-text light">Javascript</h4>
-        <div class="row text-center">
-          <div class="col s4 m2">
-            <img alt="" src="/assets/img/react.png" class="responsive-img">React
-          </div>
-          <div class="col s4 m2">
-            <img alt="" src="/assets/img/javascript.png" class="responsive-img">Javascript
-          </div>
-          <div class="col s4 m2">
-            <img alt="" src="/assets/img/jquery.png" class="responsive-img">jQuery
-          </div>
-          <div class="col s4 m2">
-            <img alt="" src="/assets/img/angular.png" class="responsive-img">Angular
-          </div>
-          <div class="col s4 m2">
-            <img alt="" src="/assets/img/nodejs.png" class="responsive-img">Node
-          </div>
-          <div class="col s4 m2">
-            <img alt="" src="/assets/img/ionic.png" class="responsive-img">Ionic
-          </div>
+        <div class="col s4 m2">
+          <img alt="" src="/assets/img/logo/javascript.png" class="responsive-img">Javascript
         </div>
-      </div>
-    </div>
-    <div class="card">
-      <div class="card-content">
-        <h4 class="brown-text light">Back-End</h4>
-        <div class="row text-center">
-          <div class="col s4 m2">
-            <img alt="" src="/assets/img/ruby.png" class="responsive-img">Ruby
-          </div>
-          <div class="col s4 m2">
-            <img alt="" src="/assets/img/rails.png" class="responsive-img">Rails
-          </div>
-          <div class="col s4 m2">
-            <img alt="" src="/assets/img/minitest.png" class="responsive-img">Minitest
-          </div>
-          <div class="col s4 m2">
-            <img alt="" src="/assets/img/postgresql.png" class="responsive-img">PostgreSQL
-          </div>
-          <div class="col s4 m2">
-            <img alt="" src="/assets/img/mongodb.png" class="responsive-img">MongoDB
-          </div>
+        <div class="col s4 m2">
+          <img alt="" src="/assets/img/logo/angular.png" class="responsive-img">Angular
         </div>
-      </div>
-    </div>
-    <div class="card">
-      <div class="card-content">
-        <h4 class="brown-text light">Build Tools</h4>
-        <div class="row text-center">
-          <div class="col s4 m2">
-            <img alt="" src="/assets/img/webpack.png" class="responsive-img">Webpack
-          </div>
-          <div class="col s4 m2">
-            <img alt="" src="/assets/img/gulp.png" class="responsive-img">Gulp
-          </div>
-          <div class="col s4 m2">
-            <img alt="" src="/assets/img/grunt.png" class="responsive-img">Grunt
-          </div>
-          <div class="col s4 m2">
-            <img alt="" src="/assets/img/bower.png" class="responsive-img">Bower
-          </div>
+        <div class="col s4 m2">
+          <img alt="" src="/assets/img/logo/reactjs.png" class="responsive-img">React
         </div>
-      </div>
-    </div>
-    <div class="card">
-      <div class="card-content">
-        <h4 class="brown-text light">CMS</h4>
-        <div class="row text-center">
-          <div class="col s4 m2">
-            <img alt="" src="/assets/img/wordpress.png" class="responsive-img">Wordpress
-          </div>
-          <div class="col s4 m2">
-            <img alt="" src="/assets/img/tumblr.png" class="responsive-img">Tumblr
-          </div>
-          <div class="col s4 m2">
-            <img alt="" src="/assets/img/squarespace.png" class="responsive-img">Squarespace
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="card">
-      <div class="card-content">
-        <h4 class="brown-text light">Other</h4>
-        <div class="row text-center">
-          <div class="col s4 m2">
-            <img alt="" src="/assets/img/github.png" class="responsive-img">Github
-          </div>
-          <div class="col s4 m2">
-            <img alt="" src="/assets/img/heroku.png" class="responsive-img">Heroku
-          </div>
-          <div class="col s4 m2">
-            <img alt="" src="/assets/img/photoshop.png" class="responsive-img">Photoshop
-          </div>
-          <div class="col s4 m2">
-            <img alt="" src="/assets/img/fcpx.png" class="responsive-img">Final Cut Pro
-          </div>
+        <div class="col s4 m2">
+          <img alt="" src="/assets/img/logo/vuejs.png" class="responsive-img">Vue JS
         </div>
       </div>
     </div>
   </div>
-
-  -->
+  <div class="card m-2 shadow">
+    <div class="card-content p-1">
+      <h4 class="brown-text light">Backend / API </h4>
+      <div class="row text-center">
+        <div class="col s4 m2">
+          <img alt="" src="/assets/img/logo/java.png" class="responsive-img">Java
+        </div>
+        <div class="col s4 m2">
+          <img alt="" src="/assets/img/logo/nodejs.png" class="responsive-img">Node JS
+        </div>
+        <div class="col s4 m2">
+          <img alt="" src="/assets/img/logo/dotnet.png" class="responsive-img">.NET Framework
+        </div>
+        <div class="col s4 m2">
+          <img alt="" src="/assets/img/logo/spring.png" class="responsive-img">Spring Framework
+        </div>
+        <div class="col s4 m2">
+          <img alt="" src="/assets/img/logo/boot.png" class="responsive-img">Spring Boot
+        </div>
+        <div class="col s4 m2">
+          <img alt="" src="/assets/img/logo/kafka.png" class="responsive-img">Apache Kafka
+        </div>
+        <div class="col s4 m2">
+          <img alt="" src="/assets/img/logo/mongodb.png" class="responsive-img">Mongo DB
+        </div>
+        <div class="col s4 m2">
+          <img alt="" src="/assets/img/logo/oracle.png" class="responsive-img">Oracle DB
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="card m-2 shadow">
+    <div class="card-content p-1">
+      <h4 class="brown-text light">DevOps Tools</h4>
+      <div class="row text-center">
+        <div class="col s4 m2">
+          <img alt="" src="/assets/img/logo/git.png" class="responsive-img">Git
+        </div>
+        <div class="col s4 m2">
+          <img alt="" src="/assets/img/logo/jenkins.png" class="responsive-img">Jenkins
+        </div>
+        <div class="col s4 m2">
+          <img alt="" src="/assets/img/logo/maven.png" class="responsive-img">Maven
+        </div>
+        <div class="col s4 m2">
+          <img alt="" src="/assets/img//logo/gradle.png" class="responsive-img">Gradle
+        </div>
+        <div class="col s4 m2">
+          <img alt="" src="/assets/img/logo/jfrog.png" class="responsive-img">Jfrog
+        </div>
+        <div class="col s4 m2">
+          <img alt="" src="/assets/img/logo/aws.png" class="responsive-img">AWS
+        </div>
+        <div class="col s4 m2">
+          <img alt="" src="/assets/img/logo/cloudfoundry.png" class="responsive-img">Cloud Foundry
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
