--- a/src/app/skills/skills.component.less
+++ b/src/app/skills/skills.component.less
@@ -4,3 +4,20 @@
     font-size: 35px;
     font-weight: 500;
 }
+
+h4 {
+    border-bottom: 1px solid #ddd;
+    margin-bottom: 30px;
+    padding: 10px;
+    color: #795548 !important;
+    font-size: 2.28rem;
+}
+
+.col img.responsive-img {
+    margin: 0 auto;
+    max-height: 100px;
+    padding-bottom: 10px;
+    text-align: center;
+    vertical-align: middle;
+    display: table-cell;
+}
