--- a/src/app/education/education.component.html
+++ b/src/app/education/education.component.html
@@ -1,1 +1,5 @@
-<p>education works!</p>
+<div class="row m-0 px-2 r text-center">
+    <div class="col-12 text-center">
+        Education
+    </div>
+</div>
