--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -1,6 +1,6 @@
 <div class="row m-0 px-2 r text-center">
 	<div class="col-12 text-center">
-		Tech Journey
+		Timeline
 	</div>
 </div>
 <div class="container p-2">
@@ -39,9 +39,20 @@
 					<span class="flag">Tata Consultancy Services</span>
 					<span class="time-wrapper"><span class="time">2016 - 2019</span></span>
 				</div>
-				<div class="desc">Journey started from here. Its the Tree where we learn lot of skills, ethics and core
+				<div class="desc">Tech Journey started from here. Its the Tree where we learn lot of skills, ethics and core
 					values. Develop from scratch, business software (Angular UI and Java Restful Services) for Airline
 					Client.</div>
+			</div>
+		</li>
+
+		<!-- Item 4 -->
+		<li>
+			<div class="direction-l">
+				<div class="flag-wrapper">
+					<span class="flag"><i class="material-icons align-middle">school</i><span class="align-middle mx-2">Engineering</span> </span>
+					<span class="time-wrapper"><span class="time">2012 - 2016</span></span>
+				</div>
+				<div class="desc">Completed Graduation in Electronics & Communication Engineering</div>
 			</div>
 		</li>
 </ul>
