--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -13,21 +13,21 @@
                 <i class="material-icons align-middle mx-2">trending_up</i>
                 <span class="align-middle">Timeline</span>
             </div>
-            <div class="pointer" [ngClass]="{'active':active=='app-education'}" (click)="focus('app-education')">
-                <i class="material-icons align-middle mx-2">school</i>
-                <span class="align-middle">Education</span>
+            <div class="pointer" [ngClass]="{'active':active=='app-awards'}" (click)="focus('app-awards')">
+                <i class="material-icons  align-middle mx-2">workspace_premium</i>
+                <span class="align-middle">Awards</span>
             </div>
             <div class="pointer" [ngClass]="{'active':active=='app-projects'}" (click)="focus('app-projects')">
                 <i class="material-icons align-middle mx-2">work_history</i>
                 <span class="align-middle">Projects</span>
             </div>
-            <div class="pointer" [ngClass]="{'active':active=='app-awards'}" (click)="focus('app-awards')">
-                <i class="material-icons  align-middle mx-2">workspace_premium</i>
-                <span class="align-middle">Awards</span>
-            </div>
             <div class="pointer" [ngClass]="{'active':active=='app-connectnow'}" (click)="focus('app-connectnow')">
                 <i class="material-icons  align-middle mx-2">forum</i>
                 <span class="align-middle">Connect Now</span>
+            </div>
+            <div class="pointer" [ngClass]="{'active':active=='app-store'}" (click)="focus('app-store')">
+                <i class="material-icons  align-middle mx-2">storefront</i>
+                <span class="align-middle">App Store</span>
             </div>
     </div>
 </div>
