--- a/src/app/awards/awards.component.less
+++ b/src/app/awards/awards.component.less
@@ -4,3 +4,14 @@
     font-size: 35px;
     font-weight: 500;
 }
+iframe::-webkit-scrollbar {  
+    display: none;
+}
+.link.pointer:hover{
+    color:cornflowerblue;
+}
+
+iframe #document img{
+    width:200px;
+
+}
