--- a/src/app/awards/awards.component.html
+++ b/src/app/awards/awards.component.html
@@ -5,7 +5,7 @@
 </div>
 <div class="container">
     <div class="row mt-4">
-        <div *ngFor="let c of awards" class="col-md-4 col-sm-6 col-xs-12 m-0 px-2">
+        <div *ngFor="let c of awards" class="col-md-4 col-sm-6 col-xs-12 m-0 p-2">
             <div class="card shadow text-center">
                 <div>
                     <embed [type]="c.t" [src]="c.l" style="width: 200px; height: 200px;">
