--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,6 +2,7 @@
 <app-profile></app-profile>
 <app-threede></app-threede>
 <app-simplify></app-simplify>
+<app-carousel></app-carousel>
 <app-skills></app-skills>
 <app-experience></app-experience>
 <app-awards></app-awards>
