--- a/src/app/simplify2/simplify2.component.html
+++ b/src/app/simplify2/simplify2.component.html
@@ -1,18 +1,7 @@
 <div class="row m-3 shadow p-3 r">
-    <table class="fs-6 fs-bold">
-        <tbody>
-          <tr>
-            <th scope="row"><i class="g material-icons">done</i></th>
-            <td><span class="c fs-6 fw-bold">Adopt - Reactive Programming </span></td>
-          </tr>
-          <tr>
-            <th scope="row"><i class="g material-icons">done</i></th>
-            <td><span class="c fs-6 fw-bold">Write - Event Driven Functions</span></td>
-          </tr>
-          <tr>
-            <th scope="row"><i class="g material-icons">done</i></th>
-            <td><span class="c fs-6 fw-bold">Build - Reusable Components </span></td>
-          </tr>
-        </tbody>
-      </table>
+    <div class="col-12 text-center fs-2 fw-bold">
+        <span><i class="material-icons g">done</i></span>
+        <span class="c">Adapt - </span>
+        <span class="c">Reactive Programming</span>
+    </div>
 </div>
