--- a/src/app/simplify2/simplify2.component.less
+++ b/src/app/simplify2/simplify2.component.less
@@ -12,7 +12,8 @@
     color:darkslateblue;
 }
 .material-icons{
-    font-weight: 500;
+    font-weight: bold;
+    font-size: 35px;
     vertical-align: middle;
     margin-right:5px;
 }
