--- a/src/app/simplify2/simplify2.component.html
+++ b/src/app/simplify2/simplify2.component.html
@@ -1,7 +1,6 @@
-<div class="row m-3 shadow p-3 r">
+<div class="row mx-3 mb-3 shadow p-3 r">
     <div class="col-12 text-center fs-2 fw-bold">
         <span><i class="material-icons g">done</i></span>
-        <span class="c">Adapt - </span>
-        <span class="c">Reactive Programming</span>
+        <span class="c">{{text}}</span>
     </div>
 </div>
