--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -1,10 +1,14 @@
-<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <app-simplify2 text="Adapt - Reactive Programming"></app-simplify2>
-      </div>
-      <div class="carousel-item" *ngFor="let t of texts">
-        <app-simplify2 [text]="t"></app-simplify2>
+<div class="row mx-3 mb-3 shadow p-3 r">
+  <div class="col-12 text-center fs-2 fw-bold">
+    <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="3000">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <span class="c">Adapt - Reactive Programming</span>
+        </div>
+        <div class="carousel-item" *ngFor="let t of texts">
+          <span class="c">{{t}}</span>
+        </div>
       </div>
     </div>
   </div>
+</div>
