--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -1,6 +1,6 @@
 <div class="row mx-3 mb-3 shadow p-3 r">
   <div class="col-12 text-center fs-2 fw-bold">
-    <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="3000">
+    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
       <div class="carousel-inner">
         <div class="carousel-item active">
           <span class="c">Adapt - Reactive Programming</span>
