--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,3 +7,5 @@
 <app-experience></app-experience>
 <app-awards></app-awards>
 <app-projects></app-projects>
+<app-connect></app-connect>
+<app-store></app-store>
