--- a/src/app/connect/connect.component.html
+++ b/src/app/connect/connect.component.html
@@ -8,8 +8,8 @@
         <div id="chat-container">
             <div id="chat-log"></div>
             <div id="user-input">
-                <input type="text" id="input-field" [(ngModel)]="input" placeholder="Type your message...">
-                <button id="send-button" onclick="send()">Send</button>
+                <input type="text" id="input-field" [(ngModel)]="input" placeholder="Hello World!!...">
+                <button id="send-button" (click)="send()">Send</button>
             </div>
         </div>
     </div>
