fixed menu scroll

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -21,7 +21,7 @@
                 <i class="material-icons align-middle mx-2">work_history</i>
                 <span class="align-middle">Projects</span>
             </div>
-            <div class="pointer" [ngClass]="{'active':active=='app-connectnow'}" (click)="focus('app-connect')">
+            <div class="pointer" [ngClass]="{'active':active=='app-connect'}" (click)="focus('app-connect')">
                 <i class="material-icons  align-middle mx-2">forum</i>
                 <span class="align-middle">Connect Now</span>
             </div>
