--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,5 +7,6 @@
 <app-experience></app-experience>
 <app-awards></app-awards>
 <app-projects></app-projects>
+<app-library></app-library>
 <app-connect></app-connect>
 <app-store></app-store>
