--- a/src/app/iam/home/home.component.less
+++ b/src/app/iam/home/home.component.less
@@ -2,11 +2,21 @@
     overflow: hidden;
     position: relative;
     height: 70px;
-    color: white;
-    background-color: cornflowerblue;
+    color: antiquewhite;
+    background-color: black;
     font-family: 'Lexend Deca', sans-serif;
 }
 
-.pointer.nav:hover{
-    border-bottom:2px solid white;
+.pointer.n:hover{
+    color:goldenrod;
+    border-bottom:2px solid goldenrod;
+}
+
+.ic{
+    font-size: 70px;
+    color: dodgerblue
+}
+.it{
+    font-weight: 500;
+    font-size: 20px;
 }
