--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -21,9 +21,9 @@
                 <i class="material-icons align-middle mx-2">work_history</i>
                 <span class="align-middle">Projects</span>
             </div>
-            <div class="pointer" [ngClass]="{'active':active=='app-connect'}" (click)="focus('app-connect')">
-                <i class="material-icons  align-middle mx-2">forum</i>
-                <span class="align-middle">Connect Now</span>
+            <div class="pointer" [ngClass]="{'active':active=='app-library1'}" (click)="focus('app-library1')">
+                <i class="material-icons  align-middle mx-2">menu_book</i>
+                <span class="align-middle">Library</span>
             </div>
             <div class="pointer" [ngClass]="{'active':active=='app-store'}" (click)="focus('app-store')">
                 <i class="material-icons  align-middle mx-2">storefront</i>
