--- a/src/app/connect/connect.component.less
+++ b/src/app/connect/connect.component.less
@@ -1,8 +1,27 @@
-.r{
-    color:white;
-    background-color: tomato;
-    font-size: 35px;
-    font-weight: 500;
+.floating-chat {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+}
+.chat-button{
+  border-color: transparent;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  background-color: #3f51b5;
+  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2);
+  .material-icons{
+    font-size: 30px;
+  }
+}
+.modal{
+  z-index:1000;
+  top:70px;
+  background-color:rgba(0, 0, 0, 0.5);
 }
 /**** Chat styles ****/
 #chat-container {
