--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,6 @@
 <app-header></app-header>
 <app-profile></app-profile>
+<app-impulse-card></app-impulse-card>
 <app-threede></app-threede>
 <app-simplify></app-simplify>
 <app-carousel></app-carousel>
