--- a/src/app/threede/threede.component.html
+++ b/src/app/threede/threede.component.html
@@ -1,19 +1,30 @@
-<div class="row p-3 shadow d-flex justify-content-center m-3 bg-card">
-    <div class="col-3 d-flex align-items-center justify-content-center">
-        <div class="txl shadow"><span>3</span><span>De</span></div>
+<div class="c p-3 shadow bg-card m-3">
+    <div class="row d-flex justify-content-center">
+        <div class="col-3 d-flex align-items-center justify-content-center">
+            <div class="txl shadow"><span>3</span><span>De</span></div>
+        </div>
+        <div class="col-12 col-sm-6 col-md-4">
+            <div class="text-start a">
+                <span class="tl">De</span>
+                <span class="tm">sign</span>
+            </div>
+            <div class="text-center a">
+                <span class="tl">De</span>
+                <span class="tm">velop</span>
+            </div>
+            <div class="text-end a">
+                <span class="tl">De</span>
+                <span class="tm">ploy</span>
+            </div>
+        </div>
     </div>
-    <div class="col-12 col-sm-6 col-md-4">
-        <div class="text-start a">
-            <span class="tl">De</span>
-            <span class="tm">sign</span>
-        </div>
-        <div class="text-center a">
-            <span class="tl">De</span>
-            <span class="tm">velop</span>
-        </div>
-        <div class="text-end a">
-            <span class="tl">De</span>
-            <span class="tm">ploy</span>
+    <div class="row">
+        <div class="col-12 text-center">
+            <button type="button" class="btn btn-primary btn-rounded waves-effect waves-light" 
+            click="window.location.href='https://impulse.vvsk.in'">
+            GET STARTED WITH 3DE 
+            <!-- <i _ngcontent-lns-c57="" class="material-icons align-middle mx-2 pointer float-end" tabindex="0" ng-reflect-router-link="ecm">open_in_new</i> -->
+            </button>
         </div>
     </div>
 </div>
