--- a/src/app/threede/threede.component.less
+++ b/src/app/threede/threede.component.less
@@ -43,3 +43,42 @@
         opacity: 1;
     }
   }
+
+  .btn {
+    /* display: inline-block; */
+    font-weight: 600;
+    text-align: center;
+    vertical-align: middle;
+    margin: 0.375rem;
+    text-transform: uppercase;
+    word-wrap: break-word;
+    white-space: normal;
+    border: 0;
+    line-height: 1.5;
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out,-webkit-box-shadow .15s ease-in-out;
+    padding: 0.84rem 2.14rem;
+}
+
+.fs-18{
+  font-size: 18px;
+}
+
+.waves-effect {
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+  background: linear-gradient(45deg, black, transparent);
+}
+
+.waves-effect:hover{
+  opacity:0.8;
+}
+
+.btn-rounded {
+    border-radius: 10em;
+}
+.btn-primary {
+    color: #fff;
+    background-color: #4285f4 !important;
+}
