--- a/src/app/threede/threede.component.html
+++ b/src/app/threede/threede.component.html
@@ -21,7 +21,7 @@
     <div class="row">
         <div class="col-12 text-center">
             <button type="button" class="btn btn-primary btn-rounded waves-effect waves-light" 
-            click="window.location.href='https://impulse.vvsk.in'">
+            onclick="window.location.href='https://impulse.vvsk.in'">
             GET STARTED WITH 3DE 
             <!-- <i _ngcontent-lns-c57="" class="material-icons align-middle mx-2 pointer float-end" tabindex="0" ng-reflect-router-link="ecm">open_in_new</i> -->
             </button>
