--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,7 @@
 <app-header></app-header>
 <app-profile></app-profile>
 <app-threede></app-threede>
+<app-game></app-game>
 <app-carousel></app-carousel>
 <app-skills></app-skills>
 <app-experience></app-experience>
