--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,8 +1,10 @@
 <div class="row m-0 text-center r">
     <span>
-        UX Designer <br /> 
-        Lead Engineer<br />
-        Tech Consultant<br /> 
-        Fullstack Developer<br />
+        Lead Software Engineer<br />
+        User Experience Engineer <br /> 
+        Technology Consultant <br />
+        System Design Expert  <br /> 
+        Application Security SME <br />
+
         </span>
 </div>
