--- a/src/app/threede/threede.component.html
+++ b/src/app/threede/threede.component.html
@@ -22,9 +22,10 @@
         <div class="col-12 text-center">
             <button type="button" class="btn btn-primary btn-rounded waves-effect waves-light" 
             onclick="window.location.href='https://impulse.vvsk.in'">
-            GET STARTED WITH 3DE 
+            GET STARTED 
             <!-- <i _ngcontent-lns-c57="" class="material-icons align-middle mx-2 pointer float-end" tabindex="0" ng-reflect-router-link="ecm">open_in_new</i> -->
             </button>
+            
         </div>
     </div>
 </div>
