--- a/src/app/awards/awards.component.html
+++ b/src/app/awards/awards.component.html
@@ -1,6 +1,6 @@
 <div class="row m-0 px-2 r text-center">
     <div class="col-12 text-center">
-        Awards & Recognition
+        Awards
     </div>
 </div>
 <div class="container">
