--- a/src/app/store/store.component.html
+++ b/src/app/store/store.component.html
@@ -13,6 +13,18 @@
                     <p class="card-text">
                         {{p.text}}
                     </p>
+                    <div style="text-align:center;" *ngIf="p.apps && p.apps.length>0">
+                        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" [attr.data-bs-interval]="[2250,2500,2750,3000][Math.floor(Math.random() * 4)]">
+                            <div class="carousel-inner" >
+                              <div class="carousel-item active">
+                                <span style="font-weight: 700;">{{p.apps[0]}}</span>
+                              </div>
+                              <div class="carousel-item" *ngFor="let t of p.apps">
+                                <span style="font-weight: 700;">{{t}}</span>
+                              </div>
+                            </div>
+                          </div>
+                    </div>
                 </div>
             </div>
         </div>
