--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,6 +2,7 @@
 <app-profile></app-profile>
 <app-threede></app-threede>
 <app-carousel></app-carousel>
+<app-repos></app-repos>
 <app-library1></app-library1>
 <app-skills></app-skills>
 <app-experience></app-experience>
