--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,6 +7,6 @@
 <app-skills></app-skills>
 <app-experience></app-experience>
 <app-awards></app-awards>
-<app-projects></app-projects>
+<app-projects *ngIf="config.config.projects"></app-projects>
 <app-store></app-store>
 <app-connect></app-connect>
