--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -5,6 +5,10 @@
                 <i class="material-icons align-middle mx-2">home</i>
                 <span class="align-middle">Home</span>
             </div>
+            <div class="pointer" [ngClass]="{'active':active=='app-repos'}" (click)="focus('app-repos')">
+                <i class="material-icons align-middle mx-2">work_history</i>
+                <span class="align-middle">Git Repos</span>
+            </div>
             <div class="pointer" [ngClass]="{'active':active=='app-library1'}" (click)="focus('app-library1')">
                 <i class="material-icons  align-middle mx-2">menu_book</i>
                 <span class="align-middle">Library</span>
@@ -20,10 +24,6 @@
             <div class="pointer" [ngClass]="{'active':active=='app-awards'}" (click)="focus('app-awards')">
                 <i class="material-icons  align-middle mx-2">workspace_premium</i>
                 <span class="align-middle">Awards</span>
-            </div>
-            <div class="pointer" [ngClass]="{'active':active=='app-projects'}" (click)="focus('app-projects')">
-                <i class="material-icons align-middle mx-2">work_history</i>
-                <span class="align-middle">Projects</span>
             </div>
             <div class="pointer" [ngClass]="{'active':active=='app-store'}" (click)="focus('app-store')">
                 <i class="material-icons  align-middle mx-2">storefront</i>
