--- a/src/app/repos/repos.component.html
+++ b/src/app/repos/repos.component.html
@@ -1,6 +1,6 @@
 <div class="row m-0 px-2 r text-center">
     <div class="col-12 text-center">
-        GitHub Repos
+        Starter Git Repos
     </div>
 </div>
 <div class="container">
