--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -28,7 +28,7 @@
 					<span class="time-wrapper"><span class="time">2019 - 2020</span></span>
 				</div>
 				<div class="desc">Great Experience. Became more professional, more agile. Enhanced skillset, completed
-					certifications. Being part of development of next gen heath care systems using Microservices.</div>
+					certifications. Being part of development of next gen health care systems using Microservices.</div>
 			</div>
 		</li>
 
